--- a/pages/addMovie.html
+++ b/pages/addMovie.html
@@ -2,29 +2,37 @@
 
 <h1 class="text-center">Lägg till Film</h1>
 
-<form id="add-movie" ng-submit="vm.addMovie()">
+<form id="add-movie" ng-submit="vm.addMovies()">
 	<label for="name">Namn</label>
-	<input id="name" type="text">
+	<input ng-model="vm.name" name="name" id="name" type="text">
 	
 	<label for="genre">Genre</label>
-	<select name="" id="genre">
+	<select ng-model="vm.genre" name="genre" id="genre">
 		<option value="sci-fi">Sci-Fi</option>
 		<option value="action">Action</option>
+		<option value="crime">Crime</option>
 		<option value="drama">Drama</option>
 		<option value="film-noir">Film-Noir</option>
 		<option value="comedy">Komedi</option>
 	</select>
 	
 	<label for="rating">Betyg</label>
-	<select name="" id="rating">
+	<select ng-model="vm.rating" name="rating" id="rating">
 		<option value="1">1</option>
 		<option value="2">2</option>
 		<option value="3">3</option>
 		<option value="4">4</option>
 		<option value="5">5</option>
+		<option value="1">6</option>
+		<option value="2">7</option>
+		<option value="3">8</option>
+		<option value="4">9</option>
+		<option value="5">10</option>
 	</select>
 	
 	<label for="year">År</label>
-	<input id="year" type="number">
+	<input ng-model="vm.year" name="year" id="year" type="number">
+
+	<input type="submit" value="Lägg till Film">
 	
 </form>
