--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="container-fluid">
 
 		<div ng-view id="view">
 			<!-- Main content with injected views -->
