--- a/pages/home.html
+++ b/pages/home.html
@@ -55,13 +55,13 @@
 </div><!-- .container -->
 
 <script type="text/ng-template" id="movieModal.html">
-<div id="movieModal">
+<div id="movieModal" style="background-image: url(http://image.tmdb.org/t/p/w1280{{vm.movieNfo.movieDb_backdrop}});">
 	<div class="modal-header">
-		<h3 class="modal-title">{{vm.movieNfo.name}}</h3>
+		<h2 class="modal-title">{{vm.movieNfo.name}}</h2>
 	</div><!-- .modal-header -->
-	<div class="modal-body">
+	<div class="modal-body" style="background-color: rgba(255,255,255, .8);">
 		<div class="col-xs-6 col-sm-4 container-poster">
-			<img ng-src="{{vm.movieNfo.imdb_poster}}" class="poster img-responsive" alt="">
+			<img ng-src="http://image.tmdb.org/t/p/w1280{{vm.movieNfo.movieDb_poster}}" class="poster img-responsive" alt="">
 		</div><!-- .container-poster -->
 		<div class="col-xs-6 col-sm-8">
 			<!-- <h2 class="">{{vm.movieNfo.name}}</h2> -->
