--- a/pages/addMovie.html
+++ b/pages/addMovie.html
@@ -1,4 +1,5 @@
 
+<alert class="alert" ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">{{alert.msg}}</alert>
 
 <div class="container">
 
@@ -15,6 +16,8 @@
 			</div><!-- .input-group -->
 		</div><!-- .col-xs-12 -->
 	</div><!-- .row -->
+
+	<button class="btn btn-primary" ng-click="vm.addAlert()">Alert Me Bro</button>
 
 	<div class="container-fluid">
 		<div class="row">
