Check if movie already is in the database

--- a/pages/addMovie.html
+++ b/pages/addMovie.html
@@ -9,10 +9,8 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="input-group">
+				<span class="input-group-addon" id="basic-addon1">search</span>
 				<input type="text" class="form-control" ng-model="vm.search" ng-change="vm.change()" placeholder="Skriv filmens fulla namn">
-				<span class="input-group-btn">
-					<button class="btn btn-primary" ng-click="vm.fetch()" type="button">Sök</button>
-				</span>
 			</div><!-- .input-group -->
 		</div><!-- .col-xs-12 -->
 	</div><!-- .row -->
