If movie exists don't add, if movie is seen, don't show rate-option

--- a/pages/addMovie.html
+++ b/pages/addMovie.html
@@ -15,7 +15,7 @@
 		</div><!-- .col-xs-12 -->
 	</div><!-- .row -->
 
-	<button class="btn btn-primary" ng-click="vm.addAlert()">Alert Me Bro</button>
+	<!-- <button class="btn btn-primary" ng-click="vm.failInsertAlert()">Alert Me Bro</button> -->
 
 	<div class="container-fluid">
 		<div class="row">
