--- a/pages/home.html
+++ b/pages/home.html
@@ -80,8 +80,9 @@
 			<div class="col-xs-12">
 				<p class="plot">{{vm.movieNfo.plot}}</p>
 				<h4 class="my rating"><span class="label label-primary">Mitt Betyg:</span><span class="label label-success">{{vm.movieNfo.my_rating}}</span></h4>
-				<h2>Betyg</h2>
-				<div class="stars">
+				
+				<div class="stars" ng-if="vm.movieNfo.my_rating === null">
+					<h2>Betyg</h2>
 					<select ng-model="vm.my_rating_val" ng-change="vm.my_rating(vm.my_rating_val)" name="rating">
 						<option value="1">★☆☆☆☆☆☆☆☆☆</option>
 						<option value="2">★★☆☆☆☆☆☆☆☆</option>
@@ -93,17 +94,16 @@
 						<option value="8">★★★★★★★★☆☆</option>
 						<option value="9">★★★★★★★★★☆</option>
 						<option value="10">★★★★★★★★★★</option>
-						option
 					</select>
+					<p>Rajting: {{vm.my_rating_val}}!</p>
 				</div>
-				<p>Rajting: {{vm.my_rating_val}}!</p>
 			</div><!-- .container-plot -->
 		</div><!-- .col-sm-8 -->
 		<div class="clearfix"></div>
 	</div><!-- .modal-body -->
 	<div class="modal-footer">
-		<button class="btn btn-danger" ng-click="vm.cancel()">Avbryt</button>
-		<button class="btn btn-success" ng-click="vm.ok(vm.movieNfo.imdb_id)">Sett</button>
+		<button class="btn btn-danger" ng-click="vm.cancel()">Stäng</button>
+		<button class="btn btn-success" ng-click="vm.ok(vm.movieNfo.imdb_id)" ng-if="vm.movieNfo.watched === '0'">Sett</button>
 	</div><!-- .modal-footer -->
 </div><!-- #movieModal -->
 </script>
