--- a/pages/home.html
+++ b/pages/home.html
@@ -2,11 +2,16 @@
 
 	<header>
 		<h1 class="text-center">Movie Base</h1>
+		<div class="col-md-6">
+			<h2 class="text-center">Osedda</h2>
+		</div>
+		<div class="col-md-6">
+			<h2 class="text-center">Sedda</h2>
+		</div>
 	</header>
 	<section id="lists">
 		<div class="row">
 			<div id="list-unseen" class="col-xs-12 col-md-6 list">
-				<h2 class="text-center">Osedda</h2>
 				<table class="table">
 					<thead>
 						<tr>
@@ -29,7 +34,6 @@
 				</table>
 			</div><!-- #list-unseen -->
 			<div id="list-seen" class="col-xs-12 col-md-6 list">
-				<h2 class="text-center">Sedda</h2>
 				<table class="table">
 					<thead>
 						<tr>
