created startpage and moved the watchlist.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
 <body>
 
-	<div class="container-fluid">
+	<div class="container-index">
 		
-		<button class="btn btn-primary"><a href="/">Listorna</a></button>
+		<button class="btn btn-primary"><a href="/">Hem</a></button>
+		<button class="btn btn-primary"><a href="/watchlist">Listorna</a></button>
 		<button class="btn btn-primary"><a href="addMovie">Lägg till Film</a></button>
 
 		<div ng-view id="view">
@@ -27,7 +28,7 @@
 		</div><!-- #view -->
 
 
-	</div><!-- .container -->
+	</div><!-- .container-index -->
 	
 </body>
 </html>
