--- a/pages/home.html
+++ b/pages/home.html
@@ -1,113 +1,6 @@
 <!-- home.html -->
+<div class="container-full container-home">
 
-	<header>
-		<h1 class="text-center">Movie Base</h1>
-		<div class="col-md-6">
-			<h2 class="text-center">Osedda</h2>
-		</div>
-		<div class="col-md-6">
-			<h2 class="text-center">Sedda</h2>
-		</div>
-	</header>
-	<section id="lists">
-		<div class="row">
-			<div id="list-unseen" class="col-xs-12 col-md-6 list">
-				<table class="table">
-					<thead>
-						<tr>
-							<th>Namn</th>
-							<th>Genre</th>
-							<th>imdb Betyg</th>
-							<th>År</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="movie in vm.unseen track by $index">
-							<td>{{movie.name}}</td>
-							<td>{{movie.genre}}</td>
-							<td>{{movie.imdb_rating}}</td>
-							<td>{{movie.year}}</td>
-							<td><button class="btn btn-primary" ng-click="vm.openModal(movie.imdb_id)">Info</button></td>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- #list-unseen -->
-			<div id="list-seen" class="col-xs-12 col-md-6 list">
-				<table class="table">
-					<thead>
-						<tr>
-							<th>Namn</th>
-							<th>Genre</th>
-							<th>Mitt Betyg</th>
-							<th>År</th>
-							<th>Mitt Betyg</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="movie in vm.seen track by $index">
-							<td>{{movie.name}}</td>
-							<td>{{movie.genre}}</td>
-							<td>{{movie.my_rating}}</td>
-							<td>{{movie.year}}</td>
-							<td><button class="btn btn-primary" ng-click="vm.openModal(movie.imdb_id)">Info</button></td>
-						</tr>
-					</tbody>
-				</table>
-			</div><!-- #list-seen -->
-		</div><!-- .row -->
-	</section><!-- #lists -->
+		<img ng-repeat="poster in vm.posters | orderBy:vm.random" src="//image.tmdb.org/t/p/w185{{poster.movieDb_poster}}" alt="" class="poster-home">
 
-<script type="text/ng-template" id="movieModal.html">
-<div id="movieModal" style="background-image: url(http://image.tmdb.org/t/p/w1280{{vm.movieNfo.movieDb_backdrop}});">
-	<div class="modal-header">
-		<h2 class="modal-title">{{vm.movieNfo.name}}</h2>
-	</div><!-- .modal-header -->
-	<div class="modal-body" style="background-color: rgba(255,255,255, .8);">
-		<div class="col-xs-12 col-sm-4 container-poster">
-			<img ng-src="http://image.tmdb.org/t/p/w1280{{vm.movieNfo.movieDb_poster}}" class="poster img-responsive" alt="">
-		</div><!-- .container-poster -->
-		<div class="col-xs-12 col-sm-8">
-			<!-- <h2 class="">{{vm.movieNfo.name}}</h2> -->
-			<div class="col-xs-6">
-				<p class="genre"><span class="label label-primary">Genre:</span> {{vm.movieNfo.genre}}</p>
-				<p class="year"><span class="label label-primary">År:</span> {{vm.movieNfo.year}}</p>
-				<p class="length"><span class="label label-primary">Längd:</span> {{vm.movieNfo.length}} min</p>
-				<p class="imdb_rating"><span class="label label-primary">Imdb Betyg:</span> <span class="label label-success">{{vm.movieNfo.imdb_rating}}</span> <small>({{vm.movieNfo.imdb_votes}})</small></p>
-			</div><!-- -col-xs-6 -->
-			<div class="col-xs-6">
-				<p class="director"><span class="label label-primary">Director:</span> {{vm.movieNfo.director}}</p>
-				<p class="writes"><span class="label label-primary">Writer:</span> {{vm.movieNfo.writer}}</p>
-				<p class="actors"><span class="label label-primary">Actors:</span> {{vm.movieNfo.actors}}</p>
-			</div><!-- -col-xs-6 -->
-			<hr>
-			<div class="col-xs-12">
-				<p class="plot">{{vm.movieNfo.plot}}</p>
-				<h4 class="my rating"><span class="label label-primary">Mitt Betyg:</span><span class="label label-success">{{vm.movieNfo.my_rating}}</span></h4>
-				
-				<div class="stars" ng-if="vm.movieNfo.my_rating === null">
-					<h2>Betyg</h2>
-					<select ng-model="vm.my_rating_val" ng-change="vm.my_rating(vm.my_rating_val)" name="rating">
-						<option value="1">★☆☆☆☆☆☆☆☆☆</option>
-						<option value="2">★★☆☆☆☆☆☆☆☆</option>
-						<option value="3">★★★☆☆☆☆☆☆☆</option>
-						<option value="4">★★★★☆☆☆☆☆☆</option>
-						<option value="5">★★★★★☆☆☆☆☆</option>
-						<option value="6">★★★★★★☆☆☆☆</option>
-						<option value="7">★★★★★★★☆☆☆</option>
-						<option value="8">★★★★★★★★☆☆</option>
-						<option value="9">★★★★★★★★★☆</option>
-						<option value="10">★★★★★★★★★★</option>
-					</select>
-					<p>Rajting: {{vm.my_rating_val}}!</p>
-				</div>
-			</div><!-- .container-plot -->
-		</div><!-- .col-sm-8 -->
-		<div class="clearfix"></div>
-	</div><!-- .modal-body -->
-	<div class="modal-footer">
-		<button class="btn btn-danger" ng-click="vm.cancel()">Stäng</button>
-		<button class="btn btn-success" ng-click="vm.ok(vm.movieNfo.imdb_id)" ng-if="vm.movieNfo.watched === '0'">Sett</button>
-	</div><!-- .modal-footer -->
-</div><!-- #movieModal -->
-</script>
+</div><!-- .container-full -->
