Some styling and a factory for poster backgrounds

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
 	<!-- Scripts -->
 	<script src="res/angular_1.4.2.min.js"></script>
 	<script src="res/angular-route_1.4.2.min.js"></script>
@@ -19,9 +22,7 @@
 
 	<div class="container-index">
 		
-		<button class="btn btn-primary"><a href="/">Hem</a></button>
-		<button class="btn btn-primary"><a href="/watchlist">Listorna</a></button>
-		<button class="btn btn-primary"><a href="addMovie">Lägg till Film</a></button>
+
 
 		<div ng-view id="view">
 			<!-- Main content with injected views -->
