--- a/pages/home.html
+++ b/pages/home.html
@@ -11,8 +11,8 @@
 
 	<div class="container-buttons">
 		<button class="btn btn-default"><a href="/">Hem</a></button>
-		<button class="btn btn-default"><a href="/watchlist">Listorna</a></button>
-		<button class="btn btn-default"><a href="addMovie">Lägg till Film</a></button>
+		<button class="btn btn-default"><a href="/watchlist">Watchlist</a></button>
+		<button class="btn btn-default"><a href="/addMovie">Lägg till Film</a></button>
 	</div><!-- .container-buttons -->
 
 
