--- a/pages/addMovie.html
+++ b/pages/addMovie.html
@@ -1,60 +1,59 @@
-
 <alert class="alert" ng-repeat="alert in vm.alerts" type="{{alert.type}}" close="vm.closeAlert($index)">{{alert.msg}}</alert>
 
-<div class="container-full">
+<header>
+	<h1 class="text-center title">Lägg till film</h1>
+	<div class="background-header">
+		<img ng-repeat="poster in vm.posters track by $index | orderBy:vm.random" src="//image.tmdb.org/t/p/w185{{poster.movieDb_poster}}" alt="" class="poster-header">
+	</div><!-- .background-header -->
+</header>
 
-	<header>
-		<h1 class="text-center title">Lägg till film</h1>
-		<div class="background-header">
-			<img ng-repeat="poster in vm.posters track by $index | orderBy:vm.random" src="//image.tmdb.org/t/p/w185{{poster.movieDb_poster}}" alt="" class="poster-header">
-		</div><!-- .background-header -->
-	</header>
+<section id="search">
+	<div class="col-sm-10 col-sm-offset-1 content">
 
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 content">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
 
-			<div class="row">
-				<div class="col-xs-12">
+				<div class="input-group">
+					<span class="input-group-addon" id="basic-addon1">search</span>
+					<input type="text" class="form-control" ng-model="vm.search" ng-change="vm.change()" placeholder="Skriv filmens fulla namn">
+				</div><!-- .input-group -->
+			</div><!-- .col-xs-10 -->
+		</div><!-- .row -->
 
-					<div class="input-group">
-						<span class="input-group-addon" id="basic-addon1">search</span>
-						<input type="text" class="form-control" ng-model="vm.search" ng-change="vm.change()" placeholder="Skriv filmens fulla namn">
-					</div><!-- .input-group -->
-				</div><!-- .col-xs-12 -->
-			</div><!-- .row -->
+		<!-- <button class="btn btn-primary" ng-click="vm.failInsertAlert()">Alert Me Bro</button> -->
 
-			<!-- <button class="btn btn-primary" ng-click="vm.failInsertAlert()">Alert Me Bro</button> -->
-
+		<div class="row">
 			<div class="col-sm-12">
 				<div class="row">
-					<div class="col-12-xs">
-						<table class="table table-search">
-							<thead>
-								<tr>
-									<th></th>
-									<th>Titel</th>
-									<th>År</th>
-									<th>Typ</th>
-									<th>Lägg Till</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="movie in vm.details">
-									<td class="search-poster"><img src="//image.tmdb.org/t/p/w185{{movie.poster_path}}" alt=""></td>
-									<td class="search-name">
-										<a href="http://www.imdb.com/title/{{movie.imdbID}}" target="_blank"><h3>{{movie.Title}}</h3></a>
-									</td>
-									<td class="search-year">{{movie.Year}}</td>
-									<td class="search-type">{{movie.Type}}</td>
-									<td class="search-add"><button class="btn btn-primary" ng-click="vm.save(movie.imdbID)">Lägg Till</button></td>
-								</tr>
-							</tbody>
-						</table>
-					</div><!-- .col-xs-12 -->
+					<div class="col-xs-10 col-xs-offset-1">
+						<div class="row">
+							<table class="table table-search">
+								<thead>
+									<tr>
+										<th></th>
+										<th>Titel</th>
+										<th>År</th>
+										<th>Typ</th>
+										<th>Lägg Till</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr ng-repeat="movie in vm.details">
+										<td class="search-poster"><img src="//image.tmdb.org/t/p/w185{{movie.poster_path}}" alt=""></td>
+										<td class="search-name">
+											<a href="http://www.imdb.com/title/{{movie.imdbID}}" target="_blank"><h3>{{movie.Title}}</h3></a>
+										</td>
+										<td class="search-year">{{movie.Year}}</td>
+										<td class="search-type">{{movie.Type}}</td>
+										<td class="search-add"><button class="btn btn-primary" ng-click="vm.save(movie.imdbID)">Lägg Till</button></td>
+									</tr>
+								</tbody>
+							</table>
+						</div><!-- .row -->
+					</div><!-- .col-xs-10 -->
 				</div><!-- .row -->
 			</div><!-- .col-sm-12 -->
+		</div><!-- .row -->
 
-		</div><!-- .col-sm-10 -->
-	</div><!-- .row -->
-
-</div><!-- .container-full -->
+	</div><!-- .col-sm-10 -->
+</section><!-- #search -->
